# fastapi_portfolio

./: futures.txt
micro_services/logger/: Cargo.toml  main.py
micro_services/logger/app/: create.py  prelude.py  read_all.py
micro_services/logger/database/: Cargo.toml
micro_services/logger/database/src/: core.rs  lib.rs
micro_services/logger/src/: main.rs
micro_services/logger/src/app/: prelude.rs
micro_services/logger/src/types/: log.rs
micro_services/logger/utils/: endpoint.py
micro_services/users/: main.py
micro_services/users/app/: prelude.py
micro_services/users/core/: endpoint.py  result.py  safe_cls.py
monolith/: explain.txt
monolith/basic_crud/: app.py  do.db  main.py  models.py
monolith/basic_crud/app/: _app.py  create.py  delete.py  prelude.py  read.py  read_all.py  update.py
monolith/basic_crud/database/: Cargo.toml  database.pyi
monolith/basic_crud/database/src/: app.rs  core.rs  lib.rs  py_lib.rs
monolith/basic_crud/sec/: jwt.py  prelude.py  pub_priv_cifred.py
monolith/basic_crud/src/: endpoint.py  middlewares.py
monolith/blog/: main.py
monolith/blog/app/user/: prelude.py
monolith/blog/src/models/: comment.py  enums.py  posts.py  user.py
monolith/blog/utils/: result.py
