[package]
name = "database"
version = "0.1.0"
edition = "2024"

[lib]
name = "database"
crate-type = ["cdylib"]

[dependencies]
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "macros" ] }
pyo3-asyncio = { version = "0.20", features = ["tokio-runtime", "attributes"] }
pyo3 = { version = "0.20.0", features = ["extension-module"] }
tokio = { version = "1", features = [ "full" ] }
sea-query = "1.0.0-rc.1"
