[package]
name = "database"
version = "0.1.1"
edition = "2024"

[lib]
name = "database"
crate-type = ["cdylib"]

[dependencies]
# sql interaction
sqlx = { version = "0.8.6", features = [ "sqlite", "runtime-tokio", "macros" ] }
sea-query = "1.0.0-rc.1"

# python bind
pyo3 = { version = "0.24.1", features = ["extension-module"] }

# runtime and utils from usefully librar
tokio = { version = "1.47.1", features = [ "full" ]}
dotenvy = "0.15"
